# pybel-obo

./: .flake8  .travis.yml  README.md  README.rst  setup.cfg  tox.ini
src/pybel_obo/: __init__.py  convert.py
tests/: __init__.py  test_convert.py
