##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = pybel_obo
version = 0.0.1-dev
url = https://github.com/cthoyt/pybel-obo
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
license = MIT
description = PyBEL-OBO converts BEL graphs' relations to the OBO relation ontology (RO).
long_description = file: README.rst
keywords =
    Biological Expression Language
    Open Biomedical Ontologies

[options]
install_requires =
    pybel
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py36
